--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
 		"vite-plugin-devtools-json": "^1.0.0",
 		"vitest": "^4.0.15",
 		"vitest-browser-svelte": "^2.0.1"
+	},
+	"dependencies": {
+		"curtainsjs": "^8.1.6"
 	}
 }
